# CMB

./: .gitattributes  .gitignore  Acleannote.ipynb  CleanPlanck.html  CleanPlanck.ipynb  CleanPlanck.md  Performance.md  README.md  Simulation_100.pkl  Simulation_1000.pkl  chain_planck_1000.pkl  chain_results_planck2.pkl  chain_results_planck_test2.pkl  compact_planck.ipynb  compare_results.py  config.yml  debug_calculations.py  deep_diagnostic.py  download_data.sh  informe_pracicas-blx.bib  informe_pracicas.bbl  informe_pracicas.tex  main.bbl  main.bib  main.py  main.tex  planck.ipynb  pyproject.toml  run_tests.py  slimplanck.ipynb
Paper/: Paper.tex  main.bib  refs.bib
comparisons/: GUIDE.md  base_CamSpecHM_TT_lowl_lowE.md  base_omegak_CamSpecHM_TT_lowl_lowE.md  base_omegak_plikHM_TTTEEE_lowl_lowE.md  base_plikHM_TT_lowl_lowE.md
files/matrix/: Tmn__154__92.npy  Tmn__180__154.npy  Tmn__180__60.npy  Tmn__30__0.npy  Tmn__92__30.npy
files/pickel/: Simulation.pkl  Simulation_1000.pkl  Simulation_test.pkl  chain_results_planck.pkl
functions/: FLOWCHARTS.md  README.md  check_correlation_function.py  correlation_function.py  cosmo.py  cosmology.py  data.py  generate_result_tables.py  getdist_stats.py  maps.py  plot_style.py  plots.ipynb  plots.py  s12.py  simulation.py  test_plot.py  test_simulation.py  tools.py  unified_stats.py  xiv.py
maps/: COM_CMB_IQU-commander_2048_R3.00_full.fits  COM_CMB_IQU-smica_2048_R3.00_full.fits  COM_PowerSpect_CMB-TT-binned_R3.01.txt  COM_PowerSpect_CMB-TT-full_R3.01.txt  single_dot.fits
runs/run_30_1000_all_8e4057ec/: config.yml
(+168 files in other folders)
