[project]
name = "practicas"
version = "0.1.0"
description = "Aquí voy a tener el código que haga en las practicas, y como healpy es una tocadura de huevos tengo que toquetear versiones para ver cual es la que funciona"
authors = [
    {name = "Álvaro Méndez"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.26.4)",
    "healpy (>=1.18.0,<2.0.0)",
    "matplotlib (==3.5.1)",
    "camb (>=1.5.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
